# production-ai-platform

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/: CODEOWNERS  pull_request_templates.md
.github/workflows/: build-and-push.yaml  ci.yaml  lint-yaml-files.yaml  terraform-ci.yaml
app/: .dockerignore  Dockerfile  pyproject.toml
app/src/knowledge_service/: __init__.py  config.py  main.py
app/src/knowledge_service/core/: exceptions.py  logging_config.py
app/src/knowledge_service/db/: base.py  models.py  session.py
deploy/: README.MD
deploy/argocd/: knowledge_service_deployment.yaml  monitoring_app.yaml  placeholder_app.yaml
deploy/manifests/: knowledge_service_deployment.yaml  placeholder_deployment.yaml
docs/architecture/: architecture.md
docs/readme_templates/: folder_level_template.md
infra/: README.md
infra/terraform/bootstrap/: backend.tf  global.auto.tfvars  main.tf  providers.tf  variables.tf
infra/terraform/bootstrap/s3/: .terraform.lock.hcl  README.MD  backend.tf
infra/terraform/envs/dev/: .terraform.lock.hcl  1-eks.tf  2-eks_nodes.tf  3-add-users.tf  4-add-admin-role.tf  5-cluster-autoscaler.tf  5-metrics-server.tf  6-aws-lbc.tf  6-pod-identity-addon.tf  7-cluster-autoscaler.tf  8-ebs-csi-driver-addon.tf  9-aws-lbc.tf  README.MD  argocd.tf  backend.tf  data.tf  providers.tf  variables.tf
infra/terraform/modules/ecr/: main.tf  output.tf  variables.tf
infra/terraform/shared/ecr/: README.MD  backend.tf  main.tf  variables.tf
infra/terraform/shared/iam/: README.MD  (+5 more)
placeholder/: Dockerfile
(+11 files in other folders)
