[project]
name = "knowledge-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shaun", email = "shaunclarke43@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
knowledge-service = "knowledge_service:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
